base/src/test/resources/failure/patterns/too-many-implicit.aya.txt
In file $FILE:4:13 ->

  2 |   
  3 |   def ifElse {A : Type} (b : Bool) (x y : A) : A
  4 |    | true, x, {y} => x
    |                ^^

Error: There are too many implicit patterns:
         y
       should be an explicit pattern matched against
         (y : A)

1 error(s), 0 warning(s).
What are you doing?
